# postnl-ecommerce-apis-python-sdk

./: README.md  pyproject.toml
doc/: client.md
doc/controllers/: barcode.md  checkout.md  confirming.md  deliverydate.md  labelling.md  locations.md  postalcodecheck.md  timeframes.md  track-trace.md
doc/models/: address-2.md  address-3.md  address-4.md  address-5.md  address-8.md  address.md  amount-2.md  amount.md  barcode-method-not-allowed-exception.md  barcode-response-invalid-exception.md  barcode-too-many-request-exception.md  checkout-postal-codecheck-method-not-allowed-exception.md  checkout-postal-codecheck-too-many-request-exception.md  checkout-postal-codecheck-unauthorized-exception.md  checkout-request.md  checkout-response-error-exception.md  complete-status.md  confirming-method-not-allowed-exception.md  confirming-response-error-1-exception.md  confirming-response-error-exception.md  confirming-too-many-request-exception.md  confirming-unauthorized-exception.md  contact-1.md  contact.md  content.md  country-code-1-enum.md  cpc-response-error-exception.md  cpc-response-invalid-exception.md  cpc-response.md  current-status.md  custom.md  customer-1.md  customer-3.md  customer.md  cut-off-time.md  delivery-option-1-enum.md  deliverydate-response-error-exception.md  dimension.md  error-5.md  error-6.md  (+67 more)
postnlecommerceapis/: __init__.py  api_helper.py  configuration.py  postnlecommerceapis_client.py
postnlecommerceapis/controllers/: __init__.py  barcode_controller.py  base_controller.py  checkout_controller.py  (+7 more)
tests/: http_response_catcher.py
(+193 files in other folders)
